# sakuin-cli

./: CLAUDE.md  Cargo.toml  build.rs
.github/workflows/: ci.yml
proto/manga/v1/: auth.proto  manga.proto  task.proto  user.proto
src/: grpc_web.rs  main.rs
